# wiper

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  License  README.md  temp.txt
.github/workflows/: rust.yml
src/: README.md  _ui.rs  app.rs  handler.rs  lib.rs  main.rs  tests.rs  tui.rs
src/config/: mod.rs
src/events/: handler.rs  mod.rs
src/fps_counter/: mod.rs
src/fs/: _store.rs  folder.rs  folder_entry.rs  mod.rs  store.rs  utils.rs
src/fs/store/: ds_hashmap.rs  mod.rs
src/init_config/: mod.rs
src/logger/: mod.rs
src/spinner/: mod.rs
src/task_manager/: _mod.rs  _mod.rs2  legacy.rs  mod.rs  ng.rs
src/tests/: tests.rs
src/tests/test_files/view/: a_root_file.txt
src/tests/test_files/view/c_folder/: folder2_file2.txt
src/tui/: mod.rs
src/ui/: chart.rs  constants.rs  content.rs  footer.rs  mod.rs  path_bar.rs  table.rs  title.rs  utils.rs
tests/: cursor.rs  delete.rs  file_tree.rs  handle_enter.rs  loading.rs
tests/common/: mod.rs
tests/test_files/: .gitignore  README.md
tests/test_files/edit/: file_to_delete_3.txt
tests/test_files/view/a_folder/: folder1_file2.txt
tests/test_files/view/b_folder/: extra_weight.txt  folder2_file3.txt
tests/test_files/view/empty/: temp2.txt
tests/view/: d_root_file.txt
tests/view/c_folder/: folder2_file1.txt
