[package]
name = "space_inspector"
version = "0.1.0"
authors = ["Alexandr Kobrin <alexk@canva.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
