[package]
name = "wiper"
version = "0.2.1"
authors = ["Alexandr Kobrin <alexk@canva.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
jwalk = "0.8.1"
num_cpus = "1.16.0"
open = "5.1.3"
opener = { version = "0.7.0", default-features = false }
ratatui = "0.26.0"
trash = "4.1.1"
